[10.February 2009]
- location.rb: Location#delete_... doesn't give the object NullLocation
  if it still has any reference in @objects (fixed bug)
- entities/bigbrick.rb: BigBrick can fall
- viking.rb: pulling without blinking
- Eric's model: added states for pulling to the right

[9.February 2009]
- sprinter.rb: full implementation of magical helmet
  (can bash Walls and Monsters; clever state changes - falling etc;
  Eric knocked out when he hits wall, Wall or Monster)
- viking.rb: added method knockout
- entities/wall.rb: destroyed Wall deletes itself from the Location properly
- gfx/bigbrick.rb: one older nogath's contribution
- entities/bigbrick.rb, testing level BigBrick:
  new game object: brick which can be pulled
- horizontalstate.rb: added state PullingState
- erik's model file: added testing graphic for pulling (not commited into CVS -
  pulling will cause error...)
- viking.rb: beginning of implementation of pulling

[8.February 2009]
- vikingstate.rb, sophisticatedspritestate.rb, viking.rb, shielder.rb,
  sword.rb, warior.rb:
  direction moved back to VikingState, but not to HorizontalState
- horizontalstate.rb: removed remains of direction from here
- ability.rb, sprinter.rb, gfx/models/erik_model.xml, shielder.rb:
  SprinterAbility removed (functionality moved to class Sprinter);
  ShielderAbility removed ( -"-                         Shielder);
  WariorAbility           (                             Warior)
- horizontalstate.rb, stateproprieties.rb: (Not)MovingStateProprieties
  renamed to (Not)MovingState
- vikingstate.rb: removed (after moving Abilities to horizontal state
  VikingState is the same as SophisticatedSpriteState)
- sophisticatedspritestate.rb: added method 'to_s'
- model files and images of vikings: all mirrored images facing right removed
  (generated programmatically)
- sprinter.rb, Erik's model file: added missing feature, Erik's magical
  helmet which can destroy Walls (actually the implementation isn't complete